--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.26",
     "@clerk/nextjs": "^6.37.3",
     "@clerk/themes": "^2.4.51",
+    "ai": "^6.0.82",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.7",
