--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "convex": "^1.31.7",
     "inngest": "^3.52.0",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
