feat(editor): set up project editor UI and show relative time
got the initial layout and navbar ready for the new project editor page. also improved how project creation times are displayed to be more readable.

- add the 'time-ago' package for formatting dates
- display project creation times in a relative format (e.g., '5 mins ago') in the project list
- introduce a new layout and navbar for the '/create/[Projectid]' editor route
- the editor navbar includes the app logo, project name (placeholder for now), upload status indicator, and user profile button
- temporarily commented out the sentry dsn in edge config for now
- update clerk 'SignIn' component to 'SignInButton' in root layout

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
+    "time-ago": "^0.2.1",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
