--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.37.3",
     "@clerk/themes": "^2.4.51",
     "@mendable/firecrawl-js": "^4.12.1",
+    "@react-symbols/icons": "^1.3.0",
     "@sentry/nextjs": "^10",
     "ai": "^6.0.82",
     "class-variance-authority": "^0.7.1",
