--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-resizable-panels": "^4.6.4",
     "tailwind-merge": "^3.4.0",
     "time-ago": "^0.2.1",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
