--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "@ai-sdk/google": "^3.0.26",
     "@clerk/nextjs": "^6.37.3",
     "@clerk/themes": "^2.4.51",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@mendable/firecrawl-js": "^4.12.1",
     "@react-symbols/icons": "^1.3.0",
+    "@replit/codemirror-minimap": "^0.5.2",
     "@sentry/nextjs": "^10",
+    "@uiw/react-codemirror": "^4.25.4",
     "ai": "^6.0.82",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
