--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.31.7",
     "inngest": "^3.52.0",
+    "ky": "^1.14.3",
     "lucide-react": "^0.563.0",
     "motion": "^12.34.0",
     "next": "16.1.6",
@@ -37,6 +38,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-resizable-panels": "^4.6.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "time-ago": "^0.2.1",
     "unique-names-generator": "^4.7.1",
