--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "@replit/codemirror-minimap": "^0.5.2",
     "@sentry/nextjs": "^10",
     "@uiw/react-codemirror": "^4.25.4",
-    "ai": "^6.0.82",
+    "ai": "^6.0.105",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.31.7",
     "inngest": "^3.52.0",
     "ky": "^1.14.3",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "^0.575.0",
     "motion": "^12.34.0",
+    "nanoid": "^5.1.6",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
